<resources>
    <string name="app_name">FoodOrderApp</string>
    <string name="home_name_user">Võ Văn Tài</string>
    <string name="home_hello_user">Xin chào</string>
    <string name="home_decrise_ImageButtonNotification">Chứa các thông báo</string>
    <string name="home_text_AutoComplete">Tìm kiếm món ăn, nhà hàng, quán ăn</string>
    <string name="home_UuDai">Ưu đãi đặc biệt</string>
    <string name="home_btnAll">Xem tất cả</string>
    <string name="home_text_title">GIẢM 30%</string>
    <string name="home_text_desc">Bánh burger thịt bò đặc biệt!</string>
    <string name="img_bo">Burger Bò</string>
    <string name="title_iconFood">title_iconFood</string>
    <string name="home_nhahang">Quán ăn</string>
    <string name="home_tenNhahang">Cô Ba Sài Gòn</string>
    <string name="home_ngoisao">Ngôi sao đánh giá</string>
    <string name="home_kq_danhgia">5.0</string>
    <string name="mota_diachi"> địa chỉ nhà hàng</string>
    <string name="diachi_nhahang">56 Phạm Cự Lượng, P2, Quận Tân Bình, HCM</string>
    <string name="home_nav_home">Trang chủ</string>
    <string name="home_nav_order">Đơn hàng</string>
    <string name="home_nav_shoppingcart">Giỏ hàng</string>
    <string name="home_nav_person">Tài khoản</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donhang_title">Đơn hàng</string>
    <string name="order_thoigian_ngay">24/06/2025</string>
    <string name="order_thoigian_gio">14:50</string>
    <string name="order_danggiao">Đang giao hàng</string>
    <string name="tenmon">1 Bánh Burger thịt bò đặt biệt</string>
    <string name="gia"> 89000</string>
    <string name="tongcong">Tổng cộng</string>
    <string name="order_danggiao_tongthoigiangiaohang">Thời gian giao hàng dự kiến: </string>
    <string name="order_danggiao_khoangthoigiangiaohang">15-25 phút</string>
    <string name="order_danggiao_diadiem">123 Nguyễn Văn Linh, Quận 7, Tp HCM</string>
    <string name="order_danggiao_sdt">0397589783</string>
    <string name="motaanh">anh</string>
    <string name="order_danggiao_chitietdonhang">Xem chi tiết đơn hàng</string>
    <string name="order_danggiao_lienhe">Liên hệ</string>
    <string name="order_danggiao_huydon">Hủy đơn</string>
    <string name="order_hoanthanh_dagiao">Đã giao</string>
    <string name="order_hoanthanh_datlai">Đặt lại</string>
    <string name="order_dahuy_lydohuy">Lý do hủy:</string>
    <string name="order_dahuy_saidiachi">Sai địa chỉ</string>
    <string name="order_dahuy">Đã hủy</string>
    <string name="shoppingcart_tieude_giohang">Giỏ hàng</string>
    <string name="shoppingcartItemTenMonAn">Burger gà giòn</string>
    <string name="shoppingcartTenNhaHang">Cô Ba Sài Gòn</string>
    <string name="shoppingcartSizeMonAn">Size lớn, cay vừa</string>
    <string name="shoppingcartGiaMonAn">105.000đ</string>
    <string name="shoppingcartSoLuong">1</string>
    <string name="shoppingcartEdt_NhapGiamGia">Nhập mã giảm giá</string>
    <string name="shoppingcartApDung">Áp dụng</string>
    <string name="shoppingcart_Tomtatdonhang">Tóm tắt đơn hàng </string>
    <string name="shoppingcart_TamTinh">Tạm tính(</string>
    <string name="shoppingcart_Giamgia">Giảm giá</string>
    <string name="shoppingcart_PhiGiaoHang">Phí giao hàng</string>
    <string name="shoppingcart_TongTienTamTinh">0đ</string>
    <string name="shoppingcart_TongCong">Tổng cộng</string>
    <string name="shoppingcart_SoLuongMon">0</string>
    <string name="shoppingcart_mon">món)</string>
    <string name="shoppingcart_giaohangden">Giao hàng đến</string>
    <string name="shoppingcart_diaChiGiaoHang">125 Nam kì khởi nghĩa, quận 3, Tp HCM</string>
    <string name="shoppingcart_thayDoiDiaChi">Thay đổi</string>
    <string name="shoppingcart_tienHang">Tổng tiền hàng: 0đ</string>
    <string name="shoppingcart_tongTienHang">0đ</string>
    <string name="Account_TieuDe">Tài Khoản</string>
    <string name="Account_Sdt">0397589783</string>
    <string name="Account_Donhangyeuthich">Đơn hàng và Yêu thích</string>
    <string name="Account_LichSuDonHang">Lịch sử đơn hàng</string>
    <string name="Account_MonAnYeuThich">Món ăn yêu thích</string>
    <string name="Account_UuDai">Ưu đãi của tôi</string>
    <string name="Account_DiaChiDaLuu">Địa chỉ đã lưu</string>
    <string name="Account_ThanhToan">Phương thức thanh toán</string>
    <string name="Account_ThongBao">Thông báo</string>
    <string name="Account_HoTro">Trung tâm hỗ trợ</string>
    <string name="Account_ChinhSach">Điều khoản và chính sách</string>
    <string name="Account_CaiDat">Cài đặt</string>
    <string name="Account_DangXuat">Đăng xuất</string>
    <string name="Account_PhienBan">Phiên bản 1.0.0</string>
    <string name="Promotio_UuDai">Các Ưu Đãi</string>
    <string name="Promotion_ThoiGianGiam">CHỈ HÔM NAY</string>
    <string name="ItemMonAn_TenMonAn">Burger Thịt Gà</string>
    <string name="ItemMonAn_ThoiGian">Cô Ba Sài Gòn</string>
    <string name="ItemMonAn_KhoangCach">7km</string>
    <string name="ItemMonAn_GiaMonAn">180.000 VND</string>
    <string name="ItemMoAn_TieuDe_MonAn">Hamburger</string>
    <string name="ItemMonAn_TongLuotMua">99+</string>
    <string name="QuanAn_TenQuanAn">Cô Ba Sài Gòn</string>
    <string name="QuanAn_TongTB_DanhGia">5.0</string>
    <string name="QuanAn_TongLuotDanhGia">(120 đánh giá)</string>
    <string name="QuanAn_ThucDon">Thực đơn nổi bật</string>
    <string name="Login_DangNhap">Đăng nhập</string>
    <string name="Login_Email">Địa chỉ email</string>
    <string name="Login_Matkhau">Mật khẩu</string>
    <string name="Login_QuenMatKhau">Quên mật khẩu?</string>
    <string name="Login_ChuaCoTaiKhoan">Bạn chưa có tài khoản?</string>
    <string name="Login_DangKy">Đăng ký</string>
    <string name="Login_or">or</string>
    <string name="Login_withGoogle">Tiếp tục với Google</string>
    <string name="SignUp_DangKy">Đăng Ký</string>
    <string name="SignUp_TenDK">Tên đăng ký</string>
    <string name="SignUp_XacNhanMK">Xác nhận mật khẩu</string>
    <string name="SignUp_MatKhau">Mật khẩu</string>
    <string name="SignUp_DaCoTK">Bạn đã có tài khoản?</string>
    <string name="Dialog_DangXacMinh">Đang xác minh thông tin</string>
    <string name="Dialog_VuiLongDoi">Vui lòng đợi giây lát…</string>
    <string name="Reset_MK">Quên mật khẩu</string>
    <string name="Reset_XacNhan">Xác Nhận</string>
    <string name="Reset_cachkhac">Bạn không thể xác thực bằng email?</string>
    <string name="Reset_HuongDan">* Vui lòng nhập email của bạn để cập nhật lại mật khẩu.</string>
    <string name="ResetOther_Tieude">Lỗi: Không thể xác thực bằng email</string>
    <string name="ResetOther_KhongThe">Không thể xác thực email</string>
    <string name="ResetOther_NoiDung">Rất tiếc, chúng tôi không thể cấp lại mật khẩu cho bạn mà không xác thực email. Vui lòng liên hệ admin để hỗ trợ.</string>
    <string name="ResetOther_EmailLienHe">Emai liên hệ</string>
    <string name="ResetOther_Email">taivovan663@gmail.com</string>
    <string name="ResetOther_QuayLaiDangNhap">Quay lại đăng nhập</string>
    <string name="default_web_client_id">283506068287-gsc1t74t89pc4kpq03ju5darqshhi514.apps.googleusercontent.com</string>
    <string name="Customize_Title">Thêm vào giỏ hàng</string>
    <string name="Customize_ChonSize">Chọn size</string>
    <string name="Customize_TenSize">Size lớn</string>
    <string name="Customize_Price">180000</string>
    <string name="Customize_TuyChon">Tùy chọn khẩu vị</string>
    <string name="Customize_Soluong">Số lượng:</string>
    <string name="Customize_TongCong">Tổng cộng:</string>
    <string name="Customize_Gia">0đ</string>
    <string name="Customize_ThemVaoGio">Thêm vào giỏ hàng 0đ</string>
    <string name="ShoppingCartTemporary_Tc">Tổng cộng</string>
    <string name="ShoppingCartTemporary_TongCong">0đ</string>
    <string name="ShoppingCartTemporary_TienHanh">Tiến hành thanh toán</string>
    <string name="CustomInformation_Tieude">Cập nhật thông tin</string>
    <string name="CustomInformation_lienhe">Thông tin liên hệ</string>
    <string name="CustomInformation_Diachi">Thông tin địa chỉ</string>
    <string name="CustomInformation_VietNam">Việt Nam</string>
    <string name="CustomInformation_HoTen">Họ và tên</string>
    <string name="CustomInformation_Sdt">Nhập số điên thoại hợp lệ</string>
    <string name="CustomInformation_diachi">Nhập thông tin địa chỉ để nhận hàng</string>
    <string name="CustomInformation_XacNhan">Xác nhận</string>
    <string name="OrderSummary_Title">Tóm tắt đơn hàng</string>
    <string name="OrderSummary_NameUser">Võ Văn Tài(0397589783)</string>
    <string name="OrderSummary_Street">123 Nguyễn Văn Linh</string>
    <string name="OrderSummary_Region">phường Tân Bình, Hồ Chí Minh</string>
    <string name="OrderSummary_Subtotal">Tổng phụ sản phẩm</string>
    <string name="OrderSummary_OriginalPrice">Giá gốc</string>
    <string name="OrderSummary_Gia">0đ</string>
    <string name="OrderSummary_Voucher">Giảm giá</string>
    <string name="OrderSummary_SubtotalShippingFee">Tổng phụ vận chuyển</string>
    <string name="OrderSummary_ShippingFee">Phí vận chuyển</string>
    <string name="OrderSummary_VoucherShipping">Giảm giá phí vận chuyển</string>
    <string name="OrderSummary_txtPaymentMethod">Phương thức thanh toán</string>
    <string name="OrderSummary_txtCashOnDelivery">Thanh toán khi nhận hàng</string>
    <string name="OrderSummary_Zalopay">Zalopay</string>
    <string name="OrderSummary_Momo">Momo</string>
    <string name="OrderSummary_txtTotal">Tổng</string>
    <string name="OrderSummary_txtQuantityFood">(0 món)</string>
    <string name="OrderSummary_Order">Đặt hàng</string>
    <string name="DialogCustom_Title">Đơn hàng chứa nhiều quán khác nhau</string>
    <string name="DialogCustom_Content">Để dễ quản lý. Vui lòng chỉ chọn các món từ một quán trong một đơn hàng.</string>
    <string name="DialogCustom_Confirm">Xác nhận</string>
    <string name="Item_ProblemDish_titleFood">Trà sữ trân châu</string>
    <string name="Item_ProblemDish_issueMessage">Chỉ còn 3 suất(bạn đặt 5 suất)</string>
    <string name="ConfirmOrder_Title">Xác nhận đơn hàng</string>
    <string name="ConfirmOrder_result">Đặt hàng thành công!</string>
    <string name="ConfirmOrder_Content">Cảm ơn bạn đã đặt hàng. Đơn hàng của bạn đang được xử lý và sẽ được giao sớm nhất có thể.</string>
    <string name="ConfirmOrder_Address">Giao đến: Tổ dân phố thôn Tân Định, phường An Bình, Gia Lai</string>
    <string name="ConfirmOrder_Time">Thời gian giao hàng dự kiến:</string>
    <string name="ConfirmOrder_Timee">15–20 phút</string>
    <string name="ConfirmOrder_ViewOrder">Theo dõi đơn hàng</string>
    <string name="ConfirmOrder_titleWarning">Món có vấn đề</string>
    <string name="ConfirmOrder_failed">Đặt hàng không thành công!</string>
    <string name="ConfirmOrder_problem">Rất tiếc, một số món trong đơn hàng của bạn đã hết hàng hoặc không đủ số lượng.</string>
    <string name="ConfirmOrder_order">Chỉnh sửa đơn hàng</string>
    <string-array name="arrayTinh">
        <item>	Hồ Chí Minh	</item>
        <item>	Gia Lai	</item>
        <item>	Hà Nội	</item>
    </string-array>
</resources>