<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:padding="10dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/txtTenNhahang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_tenNhahang"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtThoigian_ngay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang"
            android:text="@string/order_thoigian_ngay"
            android:textSize="13sp"
            android:textColor="#7C7C7C"/>
        <TextView
            android:id="@+id/txtKhoangcach_ngay_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/txtThoigian_ngay"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang"
            android:text="-"
            android:layout_marginStart="5dp"

            android:textSize="13sp"
            android:textColor="#7C7C7C"/>

        <TextView
            android:id="@+id/txtThoigian_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/txtKhoangcach_ngay_gio"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang"
            android:text="@string/order_thoigian_gio"
            android:textSize="13sp"
            android:layout_marginStart="5dp"
            android:textColor="#7C7C7C"/>

        <TextView
            android:id="@+id/danggiao"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/order_hoanthanh_dagiao"
            android:textSize="11sp"
            android:textColor="#1A8A01"
            android:background="@drawable/order_hoanthanh_dagiao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMonAn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtThoigian_ngay"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            />
        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/rvMonAn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:background="#D3D3D3"/>

        <TextView
            android:id="@+id/txtTongCong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginTop="15dp"
            android:text="@string/tongcong"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/txtTongTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="15dp"
            android:text="@string/gia"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="#1C8015"
            />


        <TextView
            android:id="@+id/txtChitiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTongCong"
            android:text="@string/order_danggiao_chitietdonhang"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:textColor="#278C1C"/>
        <TextView
            android:id="@+id/txtLienHe"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtChitiet"
            android:text="@string/order_hoanthanh_datlai"
            android:gravity="center"
            android:background="@drawable/order_danggiao_lienhe_bg"
            android:layout_marginTop="20dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>