<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:padding="10dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/txtTenNhahang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_tenNhahang"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtThoigian_ngay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang"
            android:text="@string/order_thoigian_ngay"
            android:textSize="13sp"
            android:textColor="#7C7C7C"/>
        <TextView
            android:id="@+id/txtKhoangcach_ngay_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/txtThoigian_ngay"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang"
            android:text="-"
            android:layout_marginStart="5dp"

            android:textSize="13sp"
            android:textColor="#7C7C7C"/>

        <TextView
            android:id="@+id/txtThoigian_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/txtKhoangcach_ngay_gio"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang"
            android:text="@string/order_thoigian_gio"
            android:textSize="13sp"
            android:layout_marginStart="5dp"
            android:textColor="#7C7C7C"/>

            <TextView
                android:id="@+id/danggiao"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/order_danggiao"
                android:textSize="11sp"
                android:textColor="#116BAF"
                android:background="@drawable/order_danggiao_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMonAn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtThoigian_ngay"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/rvMonAn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="#D3D3D3"/>

        <TextView
            android:id="@+id/txtTongCong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginTop="15dp"
            android:text="@string/tongcong"
            android:textSize="13sp"/>

    <TextView
        android:id="@+id/txtTongTien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginTop="15dp"
        android:text="@string/gia"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="#1C8015"
        />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardThongtin"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTongCong"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="#E0EEFF"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp">
            <ImageView
                android:id="@+id/imgThoigian"
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/imgDiaDiem"
                android:contentDescription="@string/motaanh"
                    android:src="@drawable/order_danggiao_dongho"
                />
                <TextView
                    android:id="@+id/txtthoigian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/imgThoigian"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/txtDiaDiem"
                    android:layout_marginStart="7dp"
                    android:textSize="13sp"
                    android:text="@string/order_danggiao_tongthoigiangiaohang"
                    />
                <TextView
                    android:id="@+id/txtThoiGianGiaohang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/txtthoigian"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/txtDiaDiem"
                    android:layout_marginStart="7dp"
                    android:textSize="13sp"
                    android:text="@string/order_danggiao_khoangthoigiangiaohang"
                    />
                <ImageView
                    android:id="@+id/imgDiaDiem"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgThoigian"
                    app:layout_constraintBottom_toTopOf="@+id/imgSdt"
                    android:src="@drawable/order_danggiao_diadiem"
                    android:contentDescription="@string/motaanh"
                    app:tint="#395ADC" />
                <TextView
                    android:id="@+id/txtDiaDiem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/imgDiaDiem"
                    app:layout_constraintTop_toBottomOf="@+id/txtthoigian"
                    app:layout_constraintBottom_toTopOf="@+id/txtsdt"
                    android:layout_marginStart="7dp"
                    android:textSize="13sp"
                    android:text="@string/order_danggiao_diadiem"/>
                <ImageView
                    android:id="@+id/imgSdt"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgDiaDiem"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/order_danggiao_sdt"
                    android:contentDescription="@string/motaanh"
                    />
                <TextView
                    android:id="@+id/txtsdt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/imgSdt"
                    app:layout_constraintTop_toBottomOf="@+id/txtDiaDiem"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="7dp"
                    android:text="@string/order_danggiao_sdt"
                    android:textSize="13sp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtChitiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardThongtin"
            android:text="@string/order_danggiao_chitietdonhang"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:textColor="#278C1C"/>
        <TextView
            android:id="@+id/txtLienHe"
            android:layout_width="175dp"
            android:layout_height="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtChitiet"
            android:text="@string/order_danggiao_lienhe"
            android:gravity="center"
            android:background="@drawable/order_danggiao_lienhe_bg"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/txtHuyDon"
            android:layout_width="175dp"
            android:layout_height="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtChitiet"
            android:text="@string/order_danggiao_huydon"
            android:gravity="center"
            android:background="@drawable/order_danggiao_lienhe_bg"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FD6464"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>