<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:padding="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <TextView
            android:id="@+id/txtTenNhahang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tenNhahang"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtThoigian_ngay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_thoigian_ngay"
            android:textColor="#7C7C7C"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang" />

        <TextView
            android:id="@+id/txtKhoangcach_ngay_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="-"
            android:textColor="#7C7C7C"
            android:textSize="13sp"

            app:layout_constraintStart_toEndOf="@+id/txtThoigian_ngay"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang" />

        <TextView
            android:id="@+id/txtThoigian_gio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/order_thoigian_gio"
            android:textColor="#7C7C7C"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/txtKhoangcach_ngay_gio"
            app:layout_constraintTop_toBottomOf="@+id/txtTenNhahang" />

        <TextView
            android:id="@+id/danggiao"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/order_dahuy_lydo"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/order_dahuy"
            android:textColor="#AF1126"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMonAn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtThoigian_ngay" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#D3D3D3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvMonAn" />

        <TextView
            android:id="@+id/txtTongCong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tongcong"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/txtTongTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/gia"
            android:textColor="#1C8015"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />


        <TextView
            android:id="@+id/txtChitiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/order_danggiao_chitietdonhang"
            android:textColor="#278C1C"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutLydo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLydo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/order_dahuy_lydo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTongCong">

            <TextView
                android:id="@+id/txtTieude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/order_dahuy_lydohuy"
                android:textColor="#AF1126"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtLydo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/order_dahuy_saidiachi"
                android:textColor="#AF1126"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtTieude"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>